# one-time-pad

./: key.txt  main.py  pyproject.toml
