[tool.poetry]
name = "one-time-pad"
version = "0.1.0"
description = ""
authors = ["Logan Hillyer <shivastranded@proton.me>"]
readme = "README.md"
packages = [{include = "one_time_pad"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
